[package]
name = "reqwest-cross"
version = "0.5.0-dev"
authors = ["One <one.bgz1@gmail.com>"]
categories = ["web-programming::http-client", "wasm"]
documentation = "https://docs.rs/reqwest-cross"
edition = "2021"
keywords = ["http", "wasm", "native", "web", "request"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/c-git/reqwest-cross"
description = "Wrapper around reqwest for use in both native and wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
reqwest = { default-features = false, git = "https://github.com/c-git/reqwest.git", branch = "wasm-cookies" }

# For native compilation
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", default-features = false, optional = true }

# For compiling to wasm:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.34"
js-sys = { version = "0.3.69", optional = true }
web-sys = { version = "0.3.69", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.27.0", default-features = false, features = ["macros", "rt-multi-thread"] }

[[example]]
name = "loop_yield"
required-features = ["yield_now"]

[features]
default = ["native-tokio", "reqwest_default"]
reqwest_default = ["reqwest/default"]
native-tokio = ["dep:tokio"]
yield_now = ["dep:js-sys", "dep:web-sys"]
# If we add support for other runtimes we need to update CI to test each separately (rn tests all features together)

# The following are just to enable the corresponding features in reqwest
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
http2 = ["reqwest/http2"]
json = ["reqwest/json"]
cookies = ["reqwest/cookies"]
hickory-dns = ["reqwest/hickory-dns"]
multipart = ["reqwest/multipart"]
socks = ["reqwest/socks"]
stream = ["reqwest/stream"]
brotli = ["reqwest/brotli"]
deflate = ["reqwest/deflate"]
gzip = ["reqwest/gzip"]
zstd = ["reqwest/zstd"]
